# test_pybind

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  ci.yml  environment.yaml  example.py  main.cpp  mylib.hpp  setup.py  test.py
.github/workflows/: ci.yml
python/mymodule/: __init__.py
